@@ -1,4 +1,5 @@
 - Fix encoding issue when exporting to midi on windows
+- Fix tempo rounding issue
 
 1.4.12
 - Fix bug with time signature changes
